[gd_scene load_steps=8 format=3 uid="uid://bw6td1ka2uv5c"]

[ext_resource type="Script" path="res://hud.gd" id="1_0jbru"]
[ext_resource type="FontFile" uid="uid://cw8737f1dq6n3" path="res://fonts/Xolonium-Regular.ttf" id="1_3xhbu"]
[ext_resource type="ButtonGroup" uid="uid://ccfmiaex7mmvt" path="res://action_bar.tres" id="3_63eek"]
[ext_resource type="Script" path="res://hr_panel.gd" id="4_lgdrw"]
[ext_resource type="Texture2D" uid="uid://ndlb74qnveg0" path="res://art/colm_reeves1.png" id="5_epwqy"]

[sub_resource type="Shortcut" id="Shortcut_wpxgg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fm8g5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_epwqy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0jbru")

[node name="TopBarBackground" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 41.0
color = Color(0.392157, 0.584314, 0.929412, 0.733333)

[node name="NetWorthLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.0
offset_right = 23.0
offset_bottom = 39.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_3xhbu")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_right = -43.0
offset_bottom = 39.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_3xhbu")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_3xhbu")
theme_override_font_sizes/font_size = 64
text = "Office
Sim"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_3xhbu")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_wpxgg")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WidgetButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
toggle_mode = true
button_group = ExtResource("3_63eek")
text = "Widget"

[node name="FurnitureButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -31.0
offset_right = 145.0
grow_vertical = 0
toggle_mode = true
text = "Furniture"

[node name="PackButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 147.0
offset_top = -31.0
offset_right = 228.0
grow_vertical = 0
toggle_mode = true
text = "Pack"

[node name="HRButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 231.0
offset_top = -31.0
offset_right = 312.0
grow_vertical = 0
toggle_mode = true
text = "HR"

[node name="HRPanel" type="Panel" parent="."]
visible = false
offset_top = 58.0
offset_right = 1152.0
offset_bottom = 616.0
script = ExtResource("4_lgdrw")

[node name="TabContainer" type="TabContainer" parent="HRPanel"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 558.0
current_tab = 1

[node name="Recruiting" type="Control" parent="HRPanel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Recruit" type="Button" parent="HRPanel/TabContainer/Recruiting"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 129.0
tooltip_text = "Click to hire"

[node name="Name" type="Label" parent="HRPanel/TabContainer/Recruiting/Recruit"]
layout_mode = 0
offset_left = 144.0
offset_top = 49.0
offset_right = 248.0
offset_bottom = 72.0
text = "Colm Reeves"

[node name="Rate" type="Label" parent="HRPanel/TabContainer/Recruiting/Recruit"]
layout_mode = 0
offset_left = 144.0
offset_top = 73.0
offset_right = 248.0
offset_bottom = 96.0
text = "$5 / hour"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="HRPanel/TabContainer/Recruiting/Recruit"]
position = Vector2(73, 61)
sprite_frames = SubResource("SpriteFrames_fm8g5")

[node name="Employees" type="Control" parent="HRPanel/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Employee" type="HBoxContainer" parent="HRPanel/TabContainer/Employees"]
layout_mode = 0
offset_right = 449.0
offset_bottom = 224.0

[node name="TextureRect" type="TextureRect" parent="HRPanel/TabContainer/Employees/Employee"]
layout_mode = 2
texture = ExtResource("5_epwqy")
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HRPanel/TabContainer/Employees/Employee"]
layout_mode = 2

[node name="Rate" type="Label" parent="HRPanel/TabContainer/Employees/Employee/VBoxContainer"]
layout_mode = 2
text = "$5 / hour"

[node name="Name" type="Label" parent="HRPanel/TabContainer/Employees/Employee/VBoxContainer"]
layout_mode = 2
text = "Colm Reeves"

[node name="Schedule" type="Label" parent="HRPanel/TabContainer/Employees/Employee/VBoxContainer"]
layout_mode = 2
text = "7 AM - 4 PM"

[node name="RunPayrollButton" type="Button" parent="HRPanel/TabContainer/Employees/Employee/VBoxContainer"]
layout_mode = 2
text = "Run Payroll ($0)"

[node name="FireButton" type="Button" parent="HRPanel/TabContainer/Employees/Employee/VBoxContainer"]
layout_mode = 2
text = "Fire"

[node name="AccelerateTimeButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 5.0
offset_bottom = 36.0
grow_horizontal = 0
focus_mode = 0
text = ">"

[node name="DriveProgressBar" type="ProgressBar" parent="."]
offset_right = 250.0
offset_bottom = 40.0

[node name="CommutePanel" type="Panel" parent="."]
offset_top = 52.0
offset_right = 1160.0
offset_bottom = 648.0

[node name="Title" type="Label" parent="CommutePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 37.0
offset_right = 1152.0
offset_bottom = 115.0
theme_override_fonts/font = ExtResource("1_3xhbu")
theme_override_font_sizes/font_size = 64
text = "Commute"
horizontal_alignment = 1

[node name="RestButton" type="Button" parent="CommutePanel"]
layout_mode = 0
offset_left = 496.0
offset_top = 133.0
offset_right = 674.0
offset_bottom = 164.0
text = "Rest & Return at 6 AM"

[node name="CloseCommutePanelButton" type="Button" parent="CommutePanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_top = 5.0
offset_right = -8.0
offset_bottom = 36.0
grow_horizontal = 0
focus_mode = 0
text = "X"

[connection signal="action_bar_button_pressed" from="." to="HRPanel" method="_on_hud_action_bar_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="WidgetButton" to="." method="on_widget_button_pressed"]
[connection signal="pressed" from="FurnitureButton" to="." method="on_furniture_button_pressed"]
[connection signal="pressed" from="PackButton" to="." method="_on_pack_button_pressed"]
[connection signal="pressed" from="HRButton" to="." method="_on_hr_button_pressed"]
[connection signal="visibility_changed" from="HRPanel" to="." method="_on_hr_panel_visibility_changed"]
[connection signal="pressed" from="HRPanel/TabContainer/Recruiting/Recruit" to="." method="_on_recruit_pressed"]
[connection signal="pressed" from="HRPanel/TabContainer/Employees/Employee/VBoxContainer/RunPayrollButton" to="." method="_on_run_payroll_button_pressed"]
[connection signal="pressed" from="HRPanel/TabContainer/Employees/Employee/VBoxContainer/FireButton" to="." method="_on_fire_button_pressed"]
[connection signal="pressed" from="AccelerateTimeButton" to="." method="_on_accelerate_time_pressed"]
[connection signal="visibility_changed" from="CommutePanel" to="." method="_on_commute_panel_visibility_changed"]
[connection signal="pressed" from="CommutePanel/CloseCommutePanelButton" to="." method="_on_close_commute_panel_button_pressed"]
